# consumer_data_privacy_gca

./: .gitignore  .gitmodules  .project  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  circuittool  cmake_install.cmake
input_output/: DNA_MATCHING_CIRCUIT.txt  FULL_ADDER.txt  HALF_ADDER.txt  ands.txt  frame_circuit.txt  input_party_1.txt  input_party_2.txt  out_party_1.txt  out_party_2.txt  simple.txt  test_file.txt
src/: Adders.java  CircuitBuilder.java  GenotypedData.java  User1.java  User2.java  circuittool.cpp  config.properties  execute.sh  matching_results.txt  test.sh
test/: Frame_Match.cpp  Frame_Match_1.cpp  Frame_Match_10.cpp  Frame_Match_100.cpp  Frame_Match_101.cpp  Frame_Match_102.cpp  Frame_Match_103.cpp  Frame_Match_104.cpp  Frame_Match_105.cpp  Frame_Match_106.cpp  Frame_Match_107.cpp  Frame_Match_108.cpp  Frame_Match_109.cpp  Frame_Match_11.cpp  Frame_Match_110.cpp  Frame_Match_111.cpp  Frame_Match_112.cpp  Frame_Match_113.cpp  Frame_Match_114.cpp  Frame_Match_115.cpp  Frame_Match_116.cpp  Frame_Match_117.cpp  Frame_Match_118.cpp  Frame_Match_119.cpp  Frame_Match_12.cpp  Frame_Match_120.cpp  Frame_Match_121.cpp  Frame_Match_122.cpp  Frame_Match_123.cpp  Frame_Match_124.cpp  Frame_Match_125.cpp  Frame_Match_126.cpp  Frame_Match_127.cpp  Frame_Match_128.cpp  Frame_Match_13.cpp  Frame_Match_14.cpp  Frame_Match_144.cpp  Frame_Match_15.cpp  Frame_Match_16.cpp  Frame_Match_17.cpp  (+95 more)
version_2/: CircuitBuilder.java  FrameData.java  User1.java  User1_Comms.java  User2.java  User2_Comms.java  case1.csv  case3.csv  case4.csv  case5.csv  config.properties  execute.sh  matching_results.txt  single_run.sh  temp  test_script.sh  x.sh
version_2/circuit/: 1024.txt  128.txt  256.txt  (+4 more)
(+17239 files in other folders)
